--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
         limits:
           memory: 150M
 ######################### CRLW #########################################
-  crlw-app-database:
+  database:
     image: postgres:16
     container_name: database
     expose:
