--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,7 @@ services:
       - "8000"
     restart: always
     depends_on:
-      - "crlw-app-database"
+      - "database"
     command: >
       sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
 
@@ -74,7 +74,7 @@ services:
       - "8000"
     restart: always
     depends_on:
-      - "mrs-app-database"
+      - "database"
     command: >
       sh -c "python manage.py makemigrations && python manage.py migrate --fake-initial && python manage.py runserver 0.0.0.0:8000"
 
