--- a/nginx-files/tlbproperty.com.conf
+++ b/nginx-files/tlbproperty.com.conf
@@ -1,4 +1,4 @@
-upstream front-upstream {
+upstream mrs-front-upstream {
     server mrs-app-frontend:80;
 }
 
@@ -12,7 +12,7 @@ server {
     resolver 127.0.0.11 valid=30s;
 
     location / {
-      proxy_pass http://front-upstream$request_uri;
+      proxy_pass http://mrs-front-upstream$request_uri;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
