--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,10 @@ services:
       - ./nginx-files:/etc/nginx/user_conf.d
       - nginx_secrets:/etc/letsencrypt
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 150M
   database:
     image: postgres:16
     container_name: database
@@ -43,6 +47,10 @@ services:
 
     volumes:
       - ./local_settings_crlw.py:/user/src/app/drf_jwt_backend/local_settings.py
+    deploy:
+      resources:
+        limits:
+          memory: 200M
   crlw-app-frontend:
     image: ladymeek/crlw-frontend-do:sha-83df13f
     container_name: crlw_frontend
@@ -52,6 +60,10 @@ services:
     depends_on:
       - "crlw-app-backend"
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 200M
           ######################### CRLW #########################################
           ######################### MRS #########################################
   mrs-app-backend:
@@ -68,6 +80,10 @@ services:
 
     volumes:
       - ./local_settings_mrs.py:/user/src/app/drf_jwt_backend/local_settings.py
+    deploy:
+      resources:
+        limits:
+          memory: 200M
   mrs-app-frontend:
     image: ladymeek/tlb-frontend-do:sha-4aa0035
     container_name: mrs_frontend
@@ -77,6 +93,10 @@ services:
     depends_on:
       - "mrs-app-backend"
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 200M
 volumes:
   db-data:
   nginx_secrets:
