--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     restart: always
     volumes:
       - db-data:/var/lib/mysql
-      - ./init.sh:/docker-entrypoint-initdb.d/init.sh
+      # - ./init.sh:/docker-entrypoint-initdb.d/init.sh
     deploy:
       resources:
         limits:
