--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - PGDATA=/var/lib/postgresql/data/pgdata
     restart: always
     volumes:
-      - db-data:/var/lib/mysql
+      - db-data:/var/lib/postgresql/data/pgdata
       # - ./init.sh:/docker-entrypoint-initdb.d/init.sh
     deploy:
       resources:
